<resources>
    <string name="app_name">RapidFast</string>
    <string name="app_incial">Rapid Fast más rápido que nunca</string>
    <string name="conductor">Soy Conductor</string>
    <string name="cliente">Soy Usuario</string>

    <!--    del opcional-->
    <string name="option">¿Qué quieres hacer?</string>
    <string name="Sellogin">Ya tengo cuenta</string>
    <string name="Selregisto">Regostrarme</string>


    <string name="Nombre">Nombre Completo</string>
    <string name="Email">Correo</string>

    <string name="contrasena">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="repetirCOntrasena">Repetir Contraseña</string>
    <!--    iniciar sesion-->
    <string name="IniciarSesion">Iniciar Sesion</string>
    <!--    toolbar-->
    <string name="seleccionar_accion">Selecciona una opcion</string>
    <string name="select_toolbar_opcion">Selecciona una opcion</string>
    <!--    Toast de login-->
    <string name="LoginActivityemailYpassworsIncorectos">Email o Contraseña incorrectos</string>
    <string name="EmailContaseñaobligatorio">Email y Contaseña obligatorios</string>
    <string name="passwordseis">La contraseña debe tener al menos 6 caracteres</string>

    <string name="ToolbarLogin">Login</string>
    <string name="CamposVacios">Por favor ingresar todos los campos</string>
    <string name="seiscaracteres">La contraseña debe tener al menos6 caracteres</string>
    <string name="ContrasenasNoCoinciden">Las contraseñas no coinciden</string>
    <string name="ToolBarLogin">Iniciar Sesion</string>
    <string name="ToolBarRegistro">Registro</string>
    <string name="RegistrodeConducto">Registro Conductor</string>
    <string name="cedula">Cedula</string>
    <string name="marca">Marca</string>
    <string name="marcaCarro">Marca Vehiculo</string>
    <string name="Placa">Placa Vehiculo</string>

</resources>