<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context=".SeletAuthOptionActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/reloj" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_margin="30dp"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/BtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/boton_redondeado"
            android:backgroundTint="@color/azulclaro"
            android:layout_marginRight="5dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/Sellogin"/>
        <Button
            android:id="@+id/BtnRegistro"
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/boton_redondeado"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/Selregisto"/>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>