<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegistroActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
<!--        Nombre del usuario-->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/registro"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/usuario"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/InNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Nombre"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
<!--    correo-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/email"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/InEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/contrasena"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginStart="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/InContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrasena"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/BtnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:background="@drawable/boton_redondeado"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>